# mcstatus-Rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-Rust CLI .yml
src/: address.rs  buffer.rs  connection.rs  dns.rs  error.rs  io.rs  lib.rs  main.rs  server.rs  util.rs
src/motd/: components.rs  mod.rs  motd_impl.rs  simplify.rs  transform.rs
src/protocol/: bedrock.rs  java.rs  legacy.rs  mod.rs  query.rs
src/response/: bedrock.rs  forge.rs  java.rs  legacy.rs  mod.rs  query.rs  raw.rs
