[package]
name = "mcstatus"
version = "0.1.0"
edition = "2021"
description = "A library to query Minecraft Servers for their status and capabilities."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wty2019wty/mcstatus"
keywords = ["minecraft", "protocol", "server", "status"]
categories = ["network-programming", "game-development"]

[features]
default = ["dns", "sync"]
dns = ["dep:hickory-resolver"]
sync = []
cli = ["dep:clap", "sync"]

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "time", "rt", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.8"
tracing = "0.1"

# Optional dependencies
clap = { version = "4", features = ["derive"], optional = true }
hickory-resolver = { version = "0.25", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "mcstatus"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
opt-level = "z"       # Optimize for size over speed
lto = true            # Link-time optimization
strip = true          # Strip debug symbols
codegen-units = 1     # Single codegen unit for better dedup
